feat: new clues
